# clipforge

./: .gitignore  .icon-from-png.py  .trae-icon-gen.py  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  dev-paste-target.html  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  settings.html  skills-lock.json  vite.config.ts
docs/: ARCHITECTURE.md  CLIPBOARD_CONTEXT_SCHEMA.md  COMPONENT_REFERENCE.md  FEATURE_CATALOG.md  I18N.md  INSTALL_GUIDE.md  INTRODUCTION.md  MCP_QUICK_START.md  PROPOSAL_ROADMAP.md  RELEASE.md  SERVICE_CONTRACTS.md
openspec/: project.md
release-assets/: CLIPFORGE_MUST_READ.html  clipforge-feature-catalog.json
scripts/: build-mac-release.sh  check-i18n-keys.mjs  extract-brand-icons.mjs  file-size-exemptions.json  generate-release-manual.mjs  generate-release-metadata.mjs  perf-smoke.mjs  run-unit-checks.mjs  scan-hardcoded-copy.mjs  sign-release-artifacts.mjs  verify-agent-panel.mjs  verify-ai-summary.mjs  verify-editor-agent-bridge.mjs  verify-file-size.mjs  verify-hot-path.mjs  verify-i18n-runtime.mjs  verify-mcp-dispatch.mjs  verify-runtime-boundaries.mjs  verify-settings-surface.mjs  verify-surface-boundaries.mjs
src/: App.css  App.tsx  agent-chat-page.tsx  agent-panel.tsx  frontend-diagnostics.ts  main.tsx  (+7 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  settings_service.rs
src-tauri/src/clipboard/: detect.rs  ingest.rs  mod.rs  payload.rs  read.rs  storage.rs  watcher.rs  write.rs
(+226 files in other folders)
